@@ -31,6 +31,12 @@ limitations under the License.
             </h2>
           </div>
 
+          <div class="partial">
+
+            <p>Because your Index is empty, we have not enough Information about this Field</p>
+
+          </div>
+
           <dl class="options clearfix">
 
             <dt class="field-type">Field-Type:</dt>
